traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:11: error: value update is not a member of Int
    if(getX()=0){
       ^